fix: make icons responsive on mobile

--- a/src/blocks/blocks/sharing-icons/style.scss
+++ b/src/blocks/blocks/sharing-icons/style.scss
@@ -1,5 +1,6 @@
 .wp-block-themeisle-blocks-sharing-icons {
 	display: flex;
+	flex-wrap: wrap;
 	gap: var(--iconsGap, 5px);
 	margin: 10px 0;
 
